Bug 1645579 - Disable RecycleAllocator for RDD process when WebRender is disabled on Mac. r=nical, a=jcristau

Recycling caused rendering problem on a MacOS PC with OpenGL compositor. TextureHost reuse with OpenGL compositor seemed to have a problem.

Adds pref layers.recycle-allocator-rdd for disable/enable the RecycleAllocator.

Differential Revision: https://phabricator.services.mozilla.com/D79639